# future

./: Cargo.toml  README.md
src/: app.rs  event.rs  main.rs
src/data/: fake_data.rs  mod.rs  system_stats.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/widgets/: clock.rs  countdown_timer.rs  cpu_gauge.rs  fake_logs.rs  hex_dump.rs  matrix_rain.rs  memory_gauge.rs  mod.rs  network_monitor.rs  progress_bars.rs  source_code.rs  world_map.rs
