[package]
name = "future"
version = "0.1.0"
edition = "2021"
description = "A futuristic Hollywood hacker terminal - Blade Runner meets Star Trek meets Hackers"
authors = ["webmatze"]

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# System information (real metrics)
sysinfo = "0.32"

# Async runtime for event handling
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Time and date handling
chrono = "0.4"

# Random data generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
